PoC/grammar/proof_grammar.txt
Bee Grammar

PROGRAM     ::= 'program' IDENT PARAMS STMT

STMT        ::= CPLX_STMT
              | EXPR_STMT
              | SLCT_STMT
              | ITER_STMT
              | FUNC_STMT
              | OUTP_STMT
              | RETN_STMT

CPLX_STMT   ::= ('do' | '{') '\n' STMT_LIST ('end' | '}') '\n'

STMT_LIST   ::= STMT
              | '\n'

EXPR_STMT   ::= POST_EXPR ':=' EXPR '\n'
| EXPR

SLCT_STMT   ::= 'if' '(' EXPR ')' '\n' STMT ['else' '\n' STMT]

ITER_STMT   ::= 'while' '(' EXPR ')' '\n' STMT

FUNC_STMT   ::= 'define' IDENT PARAMS STMT

OUTP_STMT   ::= 'output' EXPR '\n'

RETN_STMT   ::= 'return' [EXPR] '\n'

EXPR        ::= AND_EXPR ['or' AND_EXPR]

AND_EXPR    ::= EQLTY_EXPR ['and' EQLTY_EXPR]

EQLTY_EXPR  ::= RLTN_EXPR [('=' | '!=') RLTN_EXPR]

RLTN_EXPR   ::= ADD_EXPR [('<' | '>' | '<=' | '>=') ADD_EXPR]

ADD_EXPR    ::= MULT_EXPR [('+' | '-') MULT_EXPR]

MULT_EXPR   ::= CAST_EXPR [('*' | '/' | '%') CAST_EXPR]

CAST_EXPR   ::= [('int' | 'real' | 'str' | 'bool') ':'] UNARY_EXPR

UNARY_EXPR  ::= ['+' | '-' | 'not' | '!'] POST_EXPR

POST_EXPR   ::= PRIME_EXPR ['++' | '--' | PARAMS | SELECTOR]*

PRIME_EXPR  ::= IDENT
              | INTEGER
              | REAL
              | STRING_LITERAL
              | '(' EXPR (',' EXPR)* ')'

PARAMS      ::= '(' [EXPR (',' EXPR)*] ')'

SELECTOR    ::= '[' [EXPR (',' EXPR)*] ']'
